@@ -80,7 +80,6 @@ Bernd Melchers                      melchers@cis.fu-berlin.de
 Bernhard Baehr                      bernhard.baehr@gmx.de
 Bernhard Gabler                     bernhard@uni-koblenz.de
 Bernhard Rosenkraenzer              bero@redhat.de
-Bernhard Voelker                    bernhard.voelker@siemens-enterprise.com
 Bert Deknuydt                       Bert.Deknuydt@esat.kuleuven.ac.be
 Bert Wesarg                         bert.wesarg@googlemail.com
 Bill Brelsford                      wb@k2di.net
